// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders film correctly 1`] = `
<Details
  match={
    Object {
      "params": Object {
        "id": "tt0389790",
      },
    }
  }
>
  <Container
    fluid={false}
  >
    <div
      className="container"
    >
      <ForwardRef
        noGutters={false}
      >
        <div
          className="row"
        >
          <Col
            xs={3}
          >
            <div
              className="col-3"
            >
              <Image
                fluid={true}
                rounded={false}
                roundedCircle={false}
                thumbnail={false}
              >
                <img
                  className="img-fluid"
                />
              </Image>
            </div>
          </Col>
          <Col
            xs={9}
          >
            <div
              className="col-9"
            >
              <ForwardRef
                striped={true}
              >
                <table
                  className="table table-striped"
                >
                  <tbody>
                    <tr>
                      <td>
                        Title: 
                      </td>
                      <td />
                    </tr>
                    <tr>
                      <td>
                        Year: 
                      </td>
                      <td />
                    </tr>
                    <tr>
                      <td>
                        Rated: 
                      </td>
                      <td />
                    </tr>
                    <tr>
                      <td>
                        Actors:
                      </td>
                      <td>
                         
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Metascore:
                      </td>
                      <td>
                         
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Ratings:
                      </td>
                      <td>
                         
                      </td>
                    </tr>
                    <tr>
                      <td>
                        Plot:
                      </td>
                      <td>
                         
                      </td>
                    </tr>
                  </tbody>
                </table>
              </ForwardRef>
            </div>
          </Col>
        </div>
      </ForwardRef>
    </div>
  </Container>
</Details>
`;

exports[`renders the damn component 1`] = `
<div
  className="container"
>
  <div
    className="row"
  >
    <div
      className="col-3"
    >
      <img
        className="img-fluid"
      />
    </div>
    <div
      className="col-9"
    >
      <table
        className="table table-striped"
      >
        <tbody>
          <tr>
            <td>
              Title: 
            </td>
            <td />
          </tr>
          <tr>
            <td>
              Year: 
            </td>
            <td />
          </tr>
          <tr>
            <td>
              Rated: 
            </td>
            <td />
          </tr>
          <tr>
            <td>
              Actors:
            </td>
            <td>
               
            </td>
          </tr>
          <tr>
            <td>
              Metascore:
            </td>
            <td>
               
            </td>
          </tr>
          <tr>
            <td>
              Ratings:
            </td>
            <td>
               
            </td>
          </tr>
          <tr>
            <td>
              Plot:
            </td>
            <td>
               
            </td>
          </tr>
        </tbody>
      </table>
    </div>
  </div>
</div>
`;

exports[`renders without crashing 1`] = `
<Container
  fluid={false}
>
  <ForwardRef
    noGutters={false}
  >
    <Col
      xs={3}
    >
      <Image
        fluid={true}
        rounded={false}
        roundedCircle={false}
        thumbnail={false}
      />
    </Col>
    <Col
      xs={9}
    >
      <ForwardRef
        striped={true}
      >
        <tbody>
          <tr>
            <td>
              Title: 
            </td>
            <td />
          </tr>
          <tr>
            <td>
              Year: 
            </td>
            <td />
          </tr>
          <tr>
            <td>
              Rated: 
            </td>
            <td />
          </tr>
          <tr>
            <td>
              Actors:
            </td>
            <td>
               
            </td>
          </tr>
          <tr>
            <td>
              Metascore:
            </td>
            <td>
               
            </td>
          </tr>
          <tr>
            <td>
              Ratings:
            </td>
            <td>
               
            </td>
          </tr>
          <tr>
            <td>
              Plot:
            </td>
            <td>
               
            </td>
          </tr>
        </tbody>
      </ForwardRef>
    </Col>
  </ForwardRef>
</Container>
`;
